<resources>
    <string name="app_name">MasterZhouOverseas</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_puzzle">拼图馆</string>
    <string name="menu_store">兑换商城</string>
    <string name="menu_center">玩</string>
    <string name="menu_gallery">许愿池</string>
    <string name="menu_rank">排行榜</string>

    <string name="lorem_ipsum_title">Lorem Ipsum"</string>
    <string name="lorem_ipsum">Lorem Ipsum is simply placeholder text of the printing and
        typesetting industry. Lorem Ipsum has been the industry\'s standard placeholder text ever
        since the 1500s, when an unknown printer took a galley of type and scrambled it to make a
        type specimen book"
    </string>
    <string name="fab_content_description">Represents a view to invoke an action</string>
    <string name="image_view_item_transform_content_description">Represents an image view in the
        item
    </string>

    <string name="txt_allow">去开启</string>
    <string name="txt_deny">取消</string>
    <string name="txt_allow_manually">请在权限管理中手动启用该权限</string>
</resources>