<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_puzzle">

    <fragment
        android:id="@+id/nav_puzzle"
        android:name="com.ymmbj.mz.ui.fragment.PuzzleFragment"
        android:label="@string/menu_puzzle"
        tools:layout="@layout/fragment_puzzle" />

    <fragment
        android:id="@+id/nav_store"
        android:name="com.ymmbj.mz.ui.fragment.StoreFragment"
        android:label="@string/menu_store"
        tools:layout="@layout/fragment_store" />

    <fragment
        android:id="@+id/nav_center"
        android:name="com.ymmbj.mz.ui.fragment.CenterFragment"
        android:label="@string/menu_center"
        tools:layout="@layout/fragment_center" />

    <fragment
        android:id="@+id/nav_gallery"
        android:name="com.ymmbj.mz.ui.fragment.GalleryFragment"
        android:label="@string/menu_gallery"
        tools:layout="@layout/fragment_gallery" />

    <fragment
        android:id="@+id/nav_rank"
        android:name="com.ymmbj.mz.ui.fragment.RankFragment"
        android:label="@string/menu_rank"
        tools:layout="@layout/fragment_rank" />
</navigation>